--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ blinker==1.4
 cffi==1.14.6
 click==8.0.1
 colorama==0.4.4
+cryptography==3.4.8
 distlib==0.3.2
 dnspython==2.1.0
 dominate==2.6.0
@@ -16,6 +17,7 @@ Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
 Flask-Email==1.4.4
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
@@ -23,6 +25,7 @@ greenlet==1.1.0
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jwt==1.2.0
 Mako==1.1.4
 MarkupSafe==2.0.1
 platformdirs==2.2.0
