--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ MarkupSafe==2.0.1
 platformdirs==2.2.0
 pycodestyle==2.7.0
 pycparser==2.20
+PyJWT==2.1.0
 python-dateutil==2.8.2
 python-dotenv==0.19.0
 python-editor==1.0.4
