--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ MAIL_PORT=587
 MAIL_USE_TLS=1
 MAIL_USERNAME=jlava402@gmail.com
 MAIL_PASSWORD=Jlava4002
+MAIL_USE_SSL = False
 FLASK_APP=run.py
 FLASK_DEBUG=0
