--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ MAIL_PORT=587
 MAIL_USE_TLS=1
 MAIL_USERNAME=jlava402@gmail.com
 MAIL_PASSWORD=Jlava4002
-MAIL_USE_SSL = False
+MAIL_USE_SSL=0
 FLASK_APP=run.py
 FLASK_DEBUG=0
