--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 ORDERS_AMOUNT=20
-MAIL_SERVER=smtp.googlemail.com
+FLASK_APP=run.py
+FLASK_DEBUG=0
+
+MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=1
 MAIL_USERNAME=jlava402@gmail.com
 MAIL_PASSWORD=Jlava4002
-FLASK_APP=run.py
-FLASK_DEBUG=0
